# librepcb-parts-generator

./: .flake8  .gitignore  .travis.yml  Boilerplate_fpga.csv  LICENSE  MapFile_fpga.csv  README.md  cadquery_helpers.py  common.py  dfn_configs.py  entities.py  generate_axial_tht.py  generate_bga.py  generate_buzzer_smt.py  generate_capacitor_radial_tht.py  generate_capacitor_rect_tht.py  generate_chip.py  generate_cmp.py  generate_connectors.py  generate_crystal.py  generate_dev.py  generate_dfn.py  generate_dip.py  generate_dip_switches.py  generate_do.py  generate_dpak.py  generate_fpga_cmp.py  generate_fpga_dev.py  generate_fpga_sym.py  generate_idc.py  generate_jst_connectors.py  generate_jst_sh_connectors.py  generate_led.py  generate_logic_sym.py  generate_modules.py  generate_molex_picoblade.py  generate_mosfet_dual.py  generate_mounting_holes.py  generate_pga.py  generate_plcc.py  (+65 more)
Kicad/: Boilerplate_kicad_interface.csv  Boilerplate_kicad_stmf.csv  Digi-Key_lib_copy  Kicad_lib_copy  MapFile_kicad_display.csv  make_digikey  make_kicad  make_kicad_amplifier  make_kicad_analog  make_kicad_connector  make_kicad_connector_generic  make_kicad_cpld  make_kicad_cpu  make_kicad_diode  make_kicad_display  make_kicad_driver  make_kicad_dsp  make_kicad_gpu  make_kicad_graphics  make_kicad_intel  make_kicad_interface  make_kicad_isolator  make_kicad_lattice  make_kicad_logic  make_kicad_logic_IEEE  make_kicad_mcu  make_kicad_memory  make_kicad_microchip  make_kicad_microsemi  make_kicad_nxp  make_kicad_power  make_kicad_regulator  make_kicad_relay  make_kicad_rf  make_kicad_sensor  make_kicad_spice  make_kicad_stm  make_kicad_stmf  make_kicad_stml  make_kicad_timer  (+92 more)
Lattice/: iCE40-HX1K-CB132.csv  iCE40-HX1K-CB132.xlsx  iCE40-HX1K-TQ144.csv  iCE40-HX1K-TQ144.xlsx  iCE40-HX1K-VQ100.csv  iCE40-HX1K-VQ100.xlsx  iCE40-HX4K-BG121.csv  iCE40-HX4K-BG121.xlsx  iCE40-HX4K-CB132.csv  iCE40-HX4K-CB132.xlsx  iCE40-HX4K-TQ144.csv  iCE40-HX4K-TQ144.xlsx  iCE40-HX8K-BG121.csv  iCE40-HX8K-BG121.xlsx  iCE40-HX8K-CB132.csv  iCE40-HX8K-CB132.xlsx  iCE40-HX8K-CM225.csv  iCE40-HX8K-CM225.xlsx  iCE40-HX8K-CT256.csv  iCE40-HX8K-CT256.xlsx  iCE40-LP1K-CB121.csv  iCE40-LP1K-CB121.xlsx  iCE40-LP1K-CB81.csv  iCE40-LP1K-CB81.xlsx  iCE40-LP1K-CM121.csv  iCE40-LP1K-CM121.xlsx  iCE40-LP1K-CM36.csv  iCE40-LP1K-CM36.xlsx  iCE40-LP1K-CM49.csv  iCE40-LP1K-CM49.xlsx  iCE40-LP1K-CM81.csv  iCE40-LP1K-CM81.xlsx  iCE40-LP1K-QN84.csv  iCE40-LP1K-QN84.xlsx  iCE40-LP1K-SWG16TR.csv  iCE40-LP1K-SWG16TR.xlsx  iCE40-LP384-CM36.csv  iCE40-LP384-CM36.xlsx  iCE40-LP384-CM49.csv  iCE40-LP384-CM49.xlsx  (+20 more)
Logic/: Boilerplate_Generic.csv  Boilerplate_Logic.csv  Boilerplate_buffer.csv  Boilerplate_flipflop.csv  Boilerplate_gates.csv  Boilerplate_multiplexor.csv  script  uuid_cache_Generic.csv  uuid_cache_Generic_cmpcat.csv  uuid_cache_Logic.csv  uuid_cache_Logic_cmpcat.csv  uuid_cache_buffer.csv  uuid_cache_buffer_cmpcat.csv  uuid_cache_flipflop.csv  uuid_cache_flipflop_cmpcat.csv  uuid_cache_gates.csv  uuid_cache_gates_cmpcat.csv  uuid_cache_multiplexor.csv  uuid_cache_multiplexor_cmpcat.csv
Microchip/: PIC18F2455.csv  PIC18F2455.csv~
(+1796 files in other folders)
