[project]
name = "librepcb-parts-generator"
authors = [
    { name = "Danilo Bargen", email = "mail@dbrgn.ch" },
    { name = "Raphael Nestler", email = "raphael.nestler@gmail.com" },
]

requires-python = ">=3.8"
dependencies = [
    "cadquery == 2.3.1",
    "numpy < 2",  # Dependency of cadquery, but not working with v2.x
]
version = "0.1.0"

[project.optional-dependencies]
test = [
    "pytest ~= 8.2.1",
    "mypy == 1.10.0",
    "ruff ~= 0.12.2",
]

[tool.setuptools.packages.find]
exclude = ["out*"]

[tool.mypy]
warn_unused_configs = true
strict = true
exclude = [
    'build'
]

[[tool.mypy.overrides]]
module = [
    'test_common',
    'test_generate_connectors',
    'test_generate_qfn',
    'test_generate_idc',
    'test_generate_stm_mcu',
]
disallow_untyped_defs = false

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint.pycodestyle]
# When the autoformatter fails to reduce the line length or it is disabled,
# allow for a bit more
max-line-length = 120


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.lint.isort]
force-wrap-aliases = false
sections = { typing = ["typing"] }
section-order = ["future", "standard-library", "typing", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
